sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var nbValue = getValueCount();
  var fin = false;
  var boucle = 0;
  
  while(boucle =! nbValue) {
    
    var i = 0; 
    while(i < nbValue-1-boucle) {
      
      if( getValue(i) > getValue(i+1) ) {
        swap(i,i+1);
      }
      i = i+1;
    }
    boucle = boucle + 1;
  }
}